--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -11,63 +11,63 @@
             <div class="div_body_top_left">
                 <p class="p_body_top_left">行业类别</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP','ZWFL=29')">销售/客服/市场/公关</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=36')">人事/行政/后勤/司机</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=27')">生产/制造/机械/质控</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=28')">法律/教育/翻译/出版</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=26')">餐饮/百货/生活/服务</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">医疗/医药/保险</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">金融/银行/财务/管理</li> 
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=33')">能源/化工/环保/汽车</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">贸易/采购/物流/仓储</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">广告/设计/娱乐/传媒</li> 
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">房产/建筑/装修/物业</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">网络/通讯/电子/软件</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">农林牧渔/其他</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">销售/客服/市场/公关</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">人事/行政/后勤/司机</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">生产/制造/机械/质控</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">法律/教育/翻译/出版</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">餐饮/百货/生活/服务</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">医疗/医药/保险</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">金融/银行/财务/管理</li> 
+                    <li class="li_body_top_left" onclick="OpenCXLB()">能源/化工/环保/汽车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">贸易/采购/物流/仓储</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">广告/设计/娱乐/传媒</li> 
+                    <li class="li_body_top_left" onclick="OpenCXLB()">房产/建筑/装修/物业</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">网络/通讯/电子/软件</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB()">农林牧渔/其他</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
                 <p class="p_body_top_right">福利专区</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=26')">销售</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=29')">年底双薪</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=36')">带薪年假</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">周末双休</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">员工体检</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=27')">包吃</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=28')">包住</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=26')">五险一金</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=29')">年底双薪</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=36')">带薪年假</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=30')">周末双休</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=89')">员工体检</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=27')">包吃</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=28')">包住</li>
                 </ul>
                 <p class="p_body_top_right">热招职位</p>
                 <ul id="ul_body_top_right_rzzw" class="ul_body_top_right">
-                    @*<li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZP CX_QZZP', 'ZWLB=57&ZW=61')">销售代表</li>*@
+                    @*<li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/ZP CX_QZZP', 'ZWLB=57&ZW=61')">销售代表</li>*@
                 </ul>
                 <p class="p_body_top_right">兼职招聘</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=653')">网络营销</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=654')">生活配送</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=655')">传单派发</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=656')">问卷调查</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=657')">游戏代练</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=658')">钟点工</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=659')">家教</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=660')">美工设计</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=661')">导游</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=662')">促销导购</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=663')">平面模特</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=664')">网店模特</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=665')">艺术老师</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=666')">化妆师</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=667')">SEO优化</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=668')">护工</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=669')">演出表演</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=670')">测试兼职</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=671')">网站开发</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=672')">网络布线</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=673')">汽车陪练</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=674')">汽车代驾</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=675')">保洁清洗</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=676')">公司注册</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=677')">兼职会计</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=653')">网络营销</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=654')">生活配送</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=655')">传单派发</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=656')">问卷调查</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=657')">游戏代练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=658')">钟点工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=659')">家教</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=660')">美工设计</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=661')">导游</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=662')">促销导购</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=663')">平面模特</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=664')">网店模特</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=665')">艺术老师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=666')">化妆师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=667')">SEO优化</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=668')">护工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=669')">演出表演</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=670')">测试兼职</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=671')">网站开发</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=672')">网络布线</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=673')">汽车陪练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=674')">汽车代驾</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=675')">保洁清洗</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=676')">公司注册</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/QZZPCX/QZZPCX_JZZP', 'JZLB=677')">兼职会计</li>
                 </ul>
             </div>
         </div>
