--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -38,8 +38,98 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWFL=28')">包住</li>
                 </ul>
                 <p class="p_body_top_right">热招职位</p>
-                <ul id="ul_body_top_right_rzzw" class="ul_body_top_right">
-                    @*<li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/ZP CX_QZZP', 'ZWLB=57&ZW=61')">销售代表</li>*@
+                <ul class="ul_body_top_right" id="ul_body_top_right_rzzw">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=61')">销售代表</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=客服&ZWMC=78')">客服专员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=市场&ZWMC=87')">市场专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=107')">人事专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=行政&ZWMC=115')">文员/秘书</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=125')">商务司机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&ZWMC=137')">普工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=质控/安防&ZWMC=178')">质量管理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=律师/法务&ZWMC=202')">律师/律师助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=208')">教师/助教</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=美容/美发&ZWMC=282')">发型师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=运动/健身&ZWMC=293')">体育教练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=旅游/酒店&ZWMC=304')">酒店前台</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=318')">收银员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=254')">服务员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=271')">保洁</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=62')">销售助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=客服&ZWMC=79')">电话客服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=市场&ZWMC=88')">市场经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=108')">人事经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=行政&ZWMC=116')">前台/接待</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=126')">货运司机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&ZWMC=138')">电工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=质控/安防&ZWMC=179')">测试经理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=律师/法务&ZWMC=203')">法务专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=209')">家教</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=运动/健身&ZWMC=294')">瑜伽老师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=旅游/酒店&ZWMC=305')">酒店服务员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=319')">促销员/导购员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=编辑/印刷/出版&ZWMC=237')">编辑/撰稿</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=255')">送餐员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=272')">保姆</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=63')">销售经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=127')">客运司机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&ZWMC=139')">木工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=质控/安防&ZWMC=180')">质量检测员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=210')">幼教/早教</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=运动/健身&ZWMC=295')">健身教练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=320')">理货员/陈列员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=256')">厨师/厨师长</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=273')">月嫂</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=行政&ZWMC=118')">行政专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=128')">出租车司机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=质控/安防&ZWMC=181')">测试工程师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=机械/仪表仪器&ZWMC=189')">结构工程师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=律师/法务&ZWMC=205')">法律顾问</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=211')">培训策划</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=美容/美发&ZWMC=285')">美容师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=编辑/印刷/出版&ZWMC=239')">排版设计</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=274')">保安</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=65')">销售顾问</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=111')">培训专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=行政&ZWMC=119')">行政经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=129')">特种车司机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=213')">培训师/讲师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=编辑/印刷/出版&ZWMC=240')">美术编辑</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=275')">育婴师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=66')">汽车销售</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=112')">培训经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=130')">驾校教练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=323')">淘宝客服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=67')">医药销售</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=客服&ZWMC=84')">网络/在线客服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=113')">招聘专员/助理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=司机&ZWMC=131')">陪练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=机械/仪表仪器&ZWMC=192')">数控工程师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=324')">淘宝美工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=214')">小学教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=家政/保洁/保安&ZWMC=277')">钟点工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&ZWMC=114')">招聘经理/主管</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=生产/研发&ZWMC=170')">技术工程师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=美容/美发&ZWMC=289')">洗头工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=325')">淘宝店长</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=215')">初中教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&ZWMC=145')">维修工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=216')">高中教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=217')">大学教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=美容/美发&ZWMC=292')">宠物美容</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=218')">职业技术教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=264')">烧烤师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=219')">兼职教师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=265')">吧台员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&ZWMC=149')">电梯工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=266')">收银员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&ZWMC=74')">客户经理</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=生产/研发&ZWMC=176')">高级工程师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=超市/淘宝/网店&ZWMC=317')">营业员</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=267')">迎宾/接待</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=268')">后厨</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&ZWMC=269')">杂工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=教育培训&ZWMC=224')">音乐/美术教师</li>
                 </ul>
                 <p class="p_body_top_right">兼职招聘</p>
                 <ul class="ul_body_top_right">
