--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ZPSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ZPSY.css
@@ -22,14 +22,14 @@
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left{margin:0;padding:0;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left{width:100px;height:55px;float:left;text-align:center;cursor:pointer;font-size:16px;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left:hover{text-decoration:underline;color:#00bfe1}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right{width:990px;height:450px;background-color:#ffffff;display:inline-block;float:left;padding-top:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right{width:12000px;height:450px;background-color:#ffffff;display:inline-block;float:left;padding-top:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .p_body_middle_item_right{width:100%;height:40px;display:inline-block;color:#000000;font-size:18px;font-weight:700;padding-top:5px;padding-left:20px;text-align:left;margin-bottom:20px;border-bottom:1px solid #cccccc;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right{margin:0;padding:0;}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;cursor:pointer;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right{width: 400px;height: 125px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;cursor:pointer;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right:hover{background-color:#eeeeee;}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .img_li_body_middle_item_right{ height: 120px;width: 100%;margin-bottom: 10px;}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 14px;overflow: hidden;}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 14px;}
-.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_jg{width: 100%;height: 20px;display: block;color: #bc6ba6;font-weight: 700;font-size: 14px;margin-bottom: 2px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_bt{ width: 50%;height: 30px;display: inline-block;float:left;font-weight:700;font-size:16px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_myxz{ width: 50%;height: 30px;display: inline-block;float:left;color:#bc6ba6;font-weight:700;padding-left:80px;font-size:16px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_cs{width: 100%;height: 30px;display: block;float:left;font-size:16px;color:#999999;}
 
 
 /*首页_底部*/
