--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -11,19 +11,59 @@
             <div class="div_body_top_left">
                 <p class="p_body_top_left">行业类别</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left" onclick="OpenCXLB()">销售/客服/市场/公关</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">人事/行政/后勤/司机</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">生产/制造/机械/质控</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">法律/教育/翻译/出版</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">餐饮/百货/生活/服务</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">医疗/医药/保险</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">金融/银行/财务/管理</li> 
-                    <li class="li_body_top_left" onclick="OpenCXLB()">能源/化工/环保/汽车</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">贸易/采购/物流/仓储</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">广告/设计/娱乐/传媒</li> 
-                    <li class="li_body_top_left" onclick="OpenCXLB()">房产/建筑/装修/物业</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">网络/通讯/电子/软件</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB()">农林牧渔/其他</li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('44')">
+                        <a class="a_body_top_left">销售/客服/市场/公关</a>
+                        <div class="div_body_top_left_inner">
+                            <p class="p_body_top_left_inner_first">销售</p>
+                            <p class="p_body_top_left_inner_second">
+                                <a class="a_body_top_left_inner_second">销售代表</a>
+                                <a class="a_body_top_left_inner_second">销售助理</a>
+                                <a class="a_body_top_left_inner_second">销售经理/主管</a>
+                                <a class="a_body_top_left_inner_second">销售总监</a>
+                                <a class="a_body_top_left_inner_second">销售顾问</a>
+                                <a class="a_body_top_left_inner_second">汽车销售</a>
+                                <a class="a_body_top_left_inner_second">医药销售</a>
+                                <a class="a_body_top_left_inner_second">器械销售</a>
+                                <a class="a_body_top_left_inner_second">区域销售</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('45')">
+                        <a class="a_body_top_left">人事/行政/后勤/司机</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('46')">
+                        <a class="a_body_top_left">生产/制造/机械/质控</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('47')">
+                        <a class="a_body_top_left">法律/教育/翻译/出版</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('48')">
+                        <a class="a_body_top_left">餐饮/百货/生活/服务</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('49')">
+                        <a class="a_body_top_left">医疗/医药/保险</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('50')">
+                        <a class="a_body_top_left">金融/银行/财务/管理</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('51')">
+                        <a class="a_body_top_left">能源/化工/环保/汽车</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('52')">
+                        <a class="a_body_top_left">贸易/采购/物流/仓储</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('53')">
+                        <a class="a_body_top_left">广告/设计/娱乐/传媒</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('54')">
+                        <a class="a_body_top_left">房产/建筑/装修/物业</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('55')">
+                        <a class="a_body_top_left">网络/通讯/电子/软件</a>
+                    </li>
+                    <li class="li_body_top_left" onclick="OpenZWLB('56')">
+                        <a class="a_body_top_left">农林牧渔/其他</a>
+                    </li>
                 </ul>
             </div>
             <div class="div_body_top_right">
