--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SHFWSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SHFWSY.cshtml
@@ -7,18 +7,22 @@
 }
 @section Section_Body {
     <div id="div_Body" class="div_body">
-        <div class="div_body_top">
-            <div class="div_body_top_left">
-                <p class="p_body_top_left">生活服务</p>
-                <ul class="ul_body_top_left">
-                    <li class="li_body_top_left"></li>
-                </ul>
-            </div>
-            <div class="div_body_top_right">
-
-            </div>
+        <div id="div_body_top" class="div_body_top">
+            @*
+                <div class="div_body_top_right">
+                    <p class="p_body_top_right">宠物狗</p>
+                    <ul class="ul_body_top_right">
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=阿拉斯加')">阿拉斯加</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=比熊')">比熊</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=博美犬')">博美犬</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=贵宾')">贵宾</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=金毛')">金毛</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=哈士奇')">哈士奇</li>
+                        <li class="li_body_top_right" onclick="OpenCXLB(31, '/SHFWCX/SHFWCX_CWG', 'PZ=格力犬')">格力犬</li>
+                    </ul>
+                </div>*@
         </div>
-        <div class="div_body_middle">
+        <div id="div_body_middle" class="div_body_middle">
 
         </div>
     </div>
