--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
@@ -23,6 +23,7 @@
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left{width:100px;height:55px;float:left;text-align:center;cursor:pointer;font-size:16px;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left:hover{text-decoration:underline;color:#59d072}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right{width:990px;height:450px;background-color:#ffffff;display:inline-block;float:left;padding-top:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .p_body_middle_item_right{width:100%;height:30px;display:inline-block;color:#000000;font-size:18px;font-weight:700;padding-top:0;padding-left:20px;text-align:left;margin-bottom:20px;border-bottom:1px solid #cccccc;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right{margin:0;padding:0;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;cursor:pointer;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right:hover{background-color:#eeeeee;}
