--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/PFCGSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/PFCGSY.css
@@ -1,18 +1,40 @@
-﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
+﻿body {width: 100%;height: 100%;background-color: #eeeff1;}
 
 /*首页_主体_上部*/
-.div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_top .div_body_top_left {width:200px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
-.div_body .div_body_top .div_body_top_left .p_body_top_left{background-color:#59d072;width:100%;height:30px;display:inline-block;color:#ffffff;font-size:18px;font-weight:700;text-align:center;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left {margin:0;height:570px;width:100%;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:30px;}
-.div_body .div_body_top .div_body_top_right{width:1000px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top{ width: 1200px;overflow-x: hidden;margin-top:10px;}
+.div_body .div_body_top .div_body_top_left {width:200px;margin-right:10px;height:1400px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top .div_body_top_left .p_body_top_left{background-color:#eb437e;width:100%;height:40px;display:inline-block;color:#ffffff;font-size:20px;padding-top:3px;font-weight:700;text-align:center;margin-bottom:20px;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left {margin:0;padding:0;height:auto;width:100%;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:50px;text-align:center;cursor:pointer;padding-top:5px;font-size:16px;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left:hover {text-decoration:underline;color:#eb437e}
+.div_body .div_body_top .div_body_top_right{width:990px;height:1400px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;text-align:left;padding:5px 20px;margin-top:10px;}
+.div_body .div_body_top .div_body_top_right .ul_body_top_right{padding:0;margin-bottom:0px;padding-left:10px;} 
+.div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right{cursor:pointer;width:140px;height:30px;display:inline-block;float:left;padding:5px 10px;}
+.div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right:hover {text-decoration:underline;color:#eb437e}
+
 
 /*首页_主体_中部*/
-.div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: 1650px;}
+.div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: auto;margin-bottom:10px;}
+.div_body .div_body_middle .div_body_middle_item{width:100%;height:450px;margin-top:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left{width:200px;height:450px;background-color:#ffffff;display:inline-block;float:left;margin-right:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .p_body_middle_item_left{width:100%;height:40px;display:inline-block;color:#000000;font-size:18px;font-weight:700;padding-top:5px;text-align:center;margin-bottom:20px;border-bottom:1px solid #cccccc;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left{margin:0;padding:0;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left{width:100px;height:55px;float:left;text-align:center;cursor:pointer;font-size:16px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .ul_body_middle_item_left .li_body_middle_item_left:hover{text-decoration:underline;color:#eb437e}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right{width:990px;height:450px;background-color:#ffffff;display:inline-block;float:left;padding-top:10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .p_body_middle_item_right{width:100%;height:30px;display:inline-block;color:#000000;font-size:18px;font-weight:700;padding-top:0;padding-left:20px;text-align:left;margin-bottom:20px;border-bottom:1px solid #cccccc;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right{margin:0;padding:0;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;cursor:pointer;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right:hover{background-color:#eeeeee;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .img_li_body_middle_item_right{ height: 120px;width: 100%;margin-bottom: 10px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 14px;overflow: hidden;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 14px;}
+.div_body .div_body_middle .div_body_middle_item .div_body_middle_item_right .ul_body_middle_item_right .li_body_middle_item_right .p_li_body_middle_item_right_jg{width: 100%;height: 20px;display: block;color: #bc6ba6;font-weight: 700;font-size: 14px;margin-bottom: 2px;}
+
 
 /*首页_底部*/
-.div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;}
+.div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;padding-top:10px;}
 .div_bottom .p_div_bottom { width: 100%;text-align: center;}
 
 ::-webkit-input-placeholder { color:#999999; }
