--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CW/CWXX_CWG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CW/CWXX_CWG.css
@@ -10,7 +10,7 @@
 .div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img{width: 470px;height: 350px;display:block;text-align:center;vertical-align:middle;line-height:350px;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show{ width: 460px;height: 350px;}
+/*.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show{ width: 460px;height: 350px;}*/
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show:hover{ cursor: pointer;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
 .div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{width: 2000px;height: 76px;padding: 0;margin-top: 10px;float: left;}
