--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
@@ -47,12 +47,15 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=156')">3000-4000元</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=157')">4000元以上</li>
                 </ul>
-                <span class="span_body_top_right" style="height:30px;">日租短租</span>
-                <ul class="ul_body_top_right" style="height:30px;">
-                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=158')">家庭旅馆</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=159')">酒店式公寓</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=160')">经济型酒店</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=161')">宾馆招待所</li>
+                <span class="span_body_top_right">日租短租</span>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=78')">家庭旅馆</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=79')">酒店式公寓</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=80')">经济型酒店</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=81')">宾馆招待所</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=82')">特色客栈</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=83')">星级酒店</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'FWLX=84')">青年旅社</li>
                 </ul>
                 <span class="span_body_top_right">二手房出售</span>
                 <ul class="ul_body_top_right">
